--- a/css/home.css
+++ b/css/home.css
@@ -699,7 +699,7 @@ header .banner .banner-content .banner-info .btn {
 .number .row {
     gap: 40px;
     position: absolute;
-    top: -157px;
+    top: -79px;
     left: 183px;
 }
 
@@ -740,7 +740,7 @@ header .banner .banner-content .banner-info .btn {
 
 /* MOVIE */
 .movie {
-    padding: 0 0 85px 0;
+    padding: 85px 0 85px 0;
 }
 
 .movie .movie__bg {
