--- a/css/home.css
+++ b/css/home.css
@@ -18,6 +18,17 @@ html {
     clear: both;
 }
 
+a{
+    text-decoration: none;
+}
+li{
+    list-style: none;
+}
+ul{
+    margin: 0;
+    padding: 0;
+}
+
 /* RESPOSIVE */
 .container {
     width: 100%;
@@ -102,10 +113,6 @@ html {
     display: none;
 }
 
-.dark .navbar input {
-    border: 1px solid transparent;
-}
-
 .dark .offer {
     background-color: #232220;
     color: white;
@@ -145,7 +152,14 @@ html {
 }
 
 .dark input {
-    background-color: #404040;
+    background-color: #232323 !important;
+    color: white !important;
+    border: none !important;
+}
+
+.dark input:focus {
+    border: 1px solid #FF6600 !important;
+    box-shadow: none;
 }
 
 .dark .food {
@@ -184,21 +198,17 @@ html {
     color: white;
 }
 
-.dark .subcribe input {
-    background-color: #232220;
-    color: white;
-    border: none;
-    transition: all 0.5s;
-}
-
-.dark .subcribe input:focus {
+/* .dark .footer__main input[type="email"] {
     border: 1px solid #FF6600;
     box-shadow: none;
+    background-color: #232220;
+} */
+
+.dark .footer__socials a {
+    background-color: #232220 ;
 }
 
-.dark footer .icons .bg {
-    background-color: #232220;
-}
+
 
 /* .dark .blog .col .comment .right a {
     color: white;
@@ -1011,160 +1021,213 @@ movie .movie__bg .button__bg .btn::after {
 /* FOOTER */
 footer {
     background-color: black;
-    padding: 85px 0 0 0;
-    font-family: 'Quicksand', sans-serif;
+}
+footer .footer__logo h5{
+    font-size: 2rem;
+}
+footer .footer__logo h5 a{
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 26px;
+    color: #fff;
+    padding: 0;
+}
+footer .footer__logo h5 a:hover{
+    color: #ff6600;
+    transition: all .5s;
+}
+.footer__main h6{
+    font-size: 22px;
+    line-height: 28px;
+    margin-bottom: 30px;
+    font-weight: 700;
+    position: relative;
+    color: #fff;
+}
+.footer__main p, .footer__main ul li a{
+    font-size: 17px;
+    line-height: 26px;
+    color: #a5a2a1;
 }
 
-/* DINER */
-footer .diner {
-    padding: 10px 32px;
-}
-
-footer .diner .text a {
+.footer__main ul .item-2 {
     text-decoration: none;
-    color: white;
-    transition: all 0.5s;
-    font-size: 20px;
 }
 
-footer .diner .text a:hover {
-    color: #FF6600;
-}
-
-footer .icons .bg {
+.footer__socials a{
+    margin-right: 10px;
+    color: #ff6600;
+    display: inline-block;
+    text-align: center;
+    font-size: 16px;
+    background: #fff;
     width: 36px;
     height: 36px;
+    line-height: 36px;
+    border-radius: 6px;
+    transition: 0.3s;
     position: relative;
-    transition: all 0.5s;
-    background-color: white;
 }
 
-footer .icons .bg i {
+.footer__socials a i {
     position: absolute;
-    top: 17px;
-    left: 17px;
-    font-size: 17px;
-    color: #FF6600;
+    left: 10px;
+    top: 10px;
 }
 
-footer .icons .bg:hover {
-    background-color: #FF6600;
+.footer__socials a:hover{
+background: #ff6600;
+transition: 0.3s;
+color: #fff;
+}
+.footer__main li{
+    margin-bottom: 10px;
 }
 
-footer .icons .bg:hover i {
-    color: white;
-}
-/* END DINER */
-
-/* CATEGORIES */
-footer .categories {
-    color: white;
-}
-
-footer .categories p {
+.footer__main li a {
     transition: all 0.5s;
-    cursor: pointer;
 }
 
-footer .categories p:hover {
-    color: #FF6600;
-}
-/* END CATEGORIES */
-
-/* ARCHIVES */
-footer .archive {
-    color: white;
+.footer__main li:hover a {
+   color: #FF6600;
 }
 
-footer .archive p {
-    transition: all 0.5s;
-    cursor: pointer;
-}
-
-footer .archive p:hover {
-    color: #FF6600;
-}
-/* END ARCHIVES */
-
-/* SUBCRIBE */
-footer .subcribe {
-    color: white;
-    padding: 0px 32px;
-}
-
-Footer .subcribe .mb-3 input {
-    height: 50px;
-    width: 333px;
-}
-
-footer .subcribe .button button {
-    height: 50px;
-    width: 333px;
-    background-color: #FF6600;
+.footer__main input[type="email"]{
+    padding: 14px 20px;
+    font-size: 18px;
+    line-height: 28px;
     border: 1px solid transparent;
-    opacity: 1;
+    outline: none;
+    width: 100%;
+    color: rgb(22 28 45 / 70%);
+    background: #fff;
+    border-radius: 6px;
+}
+.footer__main input[type="email"]:focus{
+    border: 1px solid #ff6600;
+    background-color: #fff; 
+}
+.footer__main .form__btn{
+    padding: 12px 45px;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 700;
     transition: all 0.5s;
-    /* padding: 10px 133px; */
+    border-radius: 6px;
+    border: 2px solid transparent;
+    color: #fff;
+    background-color: #ff6600;
 }
-
-footer .subcribe .btn:hover{
-    background-color: #FF6600;
+.footer__main .form__btn:hover{
+    color: #fff;
+    background-color: #ff6600;
+    border: 2px solid #ff6600;
     opacity: 0.8;
-    color: white;
 }
-/* END SUBCRIBE */
 
+/* COPYRIGHT */
+.copyright {
+    padding: 1.2em 0;
+    background: #000;
+    border-top: 1px solid rgb(255 255 255 / 5%);
+}
+.copyright .copy__main a{
+    color: #ff6600;
+}
+
+.copyright p {
+    gap: 5px;
+    align-self: center;
+    color: #ddd;
+    font-size: 17px;
+}
+
+.copyright p a {
+    color: #FF6600;
+    text-decoration: none;
+}
+
+.copyright p a:hover {
+    color: white;
+    transition: all .5s;
+}
+/* END COPYRIGHT */
 /* BACK TO TOP */
 .backtotop {
+    display: block;
+    position: fixed;
+    bottom: 55px;
+    right: 20px;
+    z-index: 99;
+    font-size: 14px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: #fff;
     width: 50px;
     height: 50px;
-    background-color: #FF6600;
-    position: sticky;
-    right: 23px;
-    bottom: 50px;
-    transition: all 0.5s;
-    /* opacity: 1; */
-    /* pointer-events: none; */
+    background: #ff6600;
+    padding: 0;
+    line-height: 48px;
+    text-align: center;
+    border-radius: 35px;
+    transition: 0.3s ease-out;
+    opacity: 0;
 }
-
+.cd-top--is-visible { 
+    /* // back-to-top button visible */
+    visibility: visible;
+    opacity: 1;}
 /* .backtotop.active {
     bottom: 32px;
     opacity: 1;
     pointer-events: auto;
 } */
 
-.backtotop a {
-    color: white;
-}
+
+  
+  
 /* END BACK TO TOP */
-
-/* COPYRIGHT */
-.copyright {
-    border-top: 1px solid rgba(255, 255, 255, 0.103);
-    padding: 10px 0;
+/* @media screen and (min-width: 992px){
+.col-lg-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
 }
-
-.copyright .text {
-    gap: 5px;
+} */
+@media screen and (max-width: 1280px){
+.container {
+    max-width: 1200px;
 }
-
-.copyright .text a {
-    color: #FF6600;
-    text-decoration: none;
 }
-
-.copyright .text a:hover {
-    color: white;
+@media screen and (max-width: 1280px){
+.story__content .whatwedo {
+    grid-column-gap: 30px;
 }
-/* END COPYRIGHT */
-
-/* END FOOTER */
-
-
-
-
-
-
-
-
-
+}
+@media (max-width: 1080px){
+.story__content .whatwedo {
+    grid-column-gap: 15px;
+}
+}
+@media (max-width: 992px){
+.story__content .whatwedo {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 40px;
+}
+}
+@media (max-width: 800px){
+.story__content .whatwedo {
+    grid-template-columns: 1fr;
+}
+}
+@media (max-width: 568px){
+.story__content .whatwedo {
+    grid-row-gap: 20px;
+    grid-column-gap: 15px;
+}
+}
+@media (max-width: 415px){
+.story__content .whatwedo {
+    grid-template-columns: 1fr;
+}
+}
